# eredivisie_standings

./: .gitignore  Dockerfile  README.md  build_and_export.sh  main.py  pyproject.toml
