[project]
name = "eredivisie-standing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.4",
    "apscheduler>=3.11.0",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.34.2",
]
